# Physical-AI-and-Humanoid-Robotics-Book

./: .gitignore  README.md  chunker.js  docusaurus.config.js  embed-course-content.js  embeddings.js  index.html  package-lock.json  package.json  process-book.js  pyproject.toml  qdrant.js  render.yaml  requirements.txt  run-project.js  server.js  sidebars.js  test-integration.html
.github/workflows/: deploy.yml
backend/: Dockerfile  main.py  requirements.txt
backend/api/: deps.py
backend/models/: book_content.py  chat_message.py  chat_session.py  chunk.py  retrieved_context.py  user_query.py
backend/services/: embedding_service.py  gemini_service.py  qdrant_service.py
backend/tests/: test_selected_text_rag.js  test_selected_text_rag.py
backend/utils/: chunker.py  config.py
book/: upload_chunks.py
book-project/: docusaurus.config.js  package-lock.json  package.json
book-project/docs/: intro.md  writing-guide.md
book/content/: sample-book.md
docs/: integration-guide.md  intro.md  workflow.md
docs/module-1-ros2/: chapter-2-nodes-topics.md  chapter-3-rclpy-agents.md
docs/module-2-digital-twin/: chapter-2-unity-visualization.md
docs/module-3-isaac/: chapter-2-vslam.md  chapter-3-navigation-nav2.md  intro.md
docs/module-4-vla/: chapter-1-whisper.md  chapter-2-llm-planning.md  chapter-3-capstone-autonomous-humanoid.md  intro.md
frontend/: chatbot-widget.css  chatbot-widget.html  chatbot-widget.js  package-lock.json  package.json  vercel.json
specs/: constitution.md  plan.md  specs-v1.md  tasks.md
src/css/: custom.css
static/: chat.html
(+116 files in other folders)
